--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
   <button>退出登录</button>
   <button>注册</button>
   <button class="put">确认上架</button>
+  <button class="item">商品列表</button>
   <button class="cart">购物车列表</button>
+  <button class="cart_add">添加到购物车</button>
+  <button class="clear" >清空购物车</button>
   <img alt="">
   <input type="file" />
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
